--- a/txt/about.html
+++ b/txt/about.html
@@ -29,17 +29,21 @@
     1986-1994<br />
     Московский Энергетический Институт (Технический Университет http://mpei.ru),
     радиотехнический факультет, специальность – «радиофизика и электроника»,
-    диплом инженера-радиофизика (регистрационный №149762)
+    диплом инженера-радиофизика
   </div>
 </div>
 
 <div class="tbl">
-  <div class="lft">
-    Доп. образование<br />
-  </div>
-  <div class="rgt">
-    2022<br />
-    Fullstack программирование, ГБО ДПО ЦЕНТР «Профессионал» Москва
+  <div class="lft">Доп. образование<br /></div>
+  <div class="flex">
+    <div class="rgt">
+      2022<br />
+      Fullstack программирование, ГБО ДПО ЦЕНТР «Профессионал» Москва
+    </div>
+    <div class="rgt">
+      2023<br />
+      WEB-разработка, Я.Практикум Москва
+    </div>
   </div>
 </div>
 <div class="tbl">
