--- a/txt/contacts.html
+++ b/txt/contacts.html
@@ -1,4 +1,5 @@
 <h2>Contacts</h2>
 e-mail: admin@3rutas.com<br>
 vk: vk.com/igor.smirnof<br>
-instagram: www.instagram.com/i.smirnof/
+instagram: www.instagram.com/i.smirnof/<br>
+GitHub: https://github.com/IgorSmirnof
