--- a/txt/portfolio.html
+++ b/txt/portfolio.html
@@ -1,4 +1,6 @@
 <h2>Portfolio</h2>
 
-<p> Моя первая работа - <a href="http://kns-club.ru/">http://kns-club.ru/</a> . Работал с html, css, javascript, php и mysql.</p>
-<p>Вторая, собственно этот сайт. Использовал html, css, чистый javascript. Без перезагрузки страницы.</p>
+<p> Моя первая работа - <a href="http://kns-club.ru/">http://kns-club.ru/</a> . Работал с HTML, CSS3, JavaScript, PHP и MySQL.</p>
+<p>Вторая, собственно этот сайт. Использовал HTML, CSS3, чистый JavaScript.</p>
+<p>Сейчас учусь в Яндекс Практикум по направлению WEb-разработка, изучаю React и NodeJS.</p>
+<p>Github: <a href="https://github.com/IgorSmirnof">https://github.com/IgorSmirnof</a></p>
